Initial commit for VietSoul

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                   isGreen: true
                 },
                 { id: 5, name: "Đồ trang trí mây tre đan", price: "150.000 VNĐ", artist: "Hợp tác xã Bao La", category: "gốm", location: "Huế",
-                  img: "https://dantra.vn/uploads/san-pham/thi-cong/decor-tuong/trang-tri-may-tre-dan-16.jpg", // Hình ảnh Đồ trang trí mây tre đan
+                  img: "https://dantra.vn/uploads/san-pham/thi-cong/decor-tuong/trang-tri-may-tre-dan-16.jpg", // Hình ảnh Đồ trang trí Mây tre đan
                   story: "Món đồ trang trí nhà cửa, sử dụng nguyên liệu mây tre đan tự nhiên, phơi nắng để tạo màu, không dùng thuốc nhuộm công nghiệp. Sản phẩm này không có Green Tag vì vận chuyển xa, nhưng nghệ nhân cam kết về nguyên liệu.",
                   greenTags: ["Nguyên liệu mây tre tự nhiên"],
                   isGreen: false
